[package]
name = "sal_9000"
version = "0.1.0"
authors = ["David Turner <git@dwt27.co.uk>"]
edition = "2018"

[dependencies]
serenity = { version="0.10", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
