[package]
name = "sal_9000"
version = "0.1.0"
authors = ["David Turner <git@dwt27.co.uk>"]
edition = "2021"

[dependencies]
serenity = { version="0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
rand = "0.8.4"
chrono = "0.4.19"
